feat(notifications): add route for web socket connections parameters retrieval when user goes down
